<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_solution"
        android:text="@string/txt_view_0"
        android:textSize="32dp"
        android:textAlignment="textEnd"
        android:textColor="@color/light_black"
        android:layout_above="@+id/text_view_result"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/break_line"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_view_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64dp" />

    <View
        android:id="@+id/break_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btns_layout"
        android:background="@android:color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingVertical="16dp"
        android:orientation="vertical"
        android:id="@+id/btns_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_c"
                android:text="@string/btn_c"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/red"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_open_bracket"
                android:text="@string/btn_close_bracket"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_close_bracket"
                android:text="@string/btn_open_bracket"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_divide"
                android:text="@string/btn_divide"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_7"
                android:text="@string/btn_7"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_8"
                android:text="@string/btn_8"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_9"
                android:text="@string/btn_9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_multiply"
                android:text="@string/btn_multiply"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_4"
                android:text="@string/btn_4"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_5"
                android:text="@string/btn_5"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_6"
                android:text="@string/btn_6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_subtract"
                android:text="@string/btn_subtract"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_1"
                android:text="@string/btn_1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_2"
                android:text="@string/btn_2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_3"
                android:text="@string/btn_3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_plus"
                android:text="@string/btn_plus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_ac"
                android:text="@string/btn_ac"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />
            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_0"
                android:text="@string/btn_0"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                />

            <Button
                android:id="@+id/btn_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/btn_dot"
                android:textColor="@color/black"
                android:textSize="30dp"
                app:cornerRadius="36dp" />

            <Button
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:id="@+id/btn_equal"
                android:text="@string/btn_equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                android:textColor="@color/black"
                android:textSize="80px"
                android:layout_margin="12dp"
                android:backgroundTint="@color/light_purple"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>